Project

General

Profile

Actions

Bug #16386

closed

Discard hangs when 'rbd_skip_partial_discard' is enabled

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16869: jewel: Discard hangs when 'rbd_skip_partial_discard' is enabledResolvedMykola GolubActions
Actions #1

Updated by Mykola Golub almost 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Jason Dillaman over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #16869: jewel: Discard hangs when 'rbd_skip_partial_discard' is enabled added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF